# pyquiz

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
pyquiz/: __init__.py  data.py  db.py  model.py  request.py  test_app.py
pyquiz/route/: question.py  quiz.py
scripts/: env.py
scripts/versions/: 0c8d9a19b897_base.py  a5ab088fe162_added_question_table.py
