[tool.poetry]
name = "pyquiz"
version = "0.1.0"
description = ""
authors = ["Robert Zagirov <zagirov.robert@yandex.ru>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.22"}
fastapi = "^0.103.2"
aiohttp = "^3.8.6"
uvicorn = "^0.23.2"
asyncpg = "^0.28.0"
alembic = "^1.12.0"
httpx = "^0.25.0"
pytest-asyncio = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
